# ttfl-picker

./: .env.example  .gitignore  CLAUDE.md  PLAYOFFS.md  README.md  TTFL_RULES.md  main.py  pyproject.toml
.github/workflows/: daily-picks.yml
src/: __init__.py  defense_stats.py  discord_notify.py  form_analysis.py  injuries.py  matchups.py  nba_config.py  nba_data.py  picker.py  playoffs.py  session.py  ttfl.py  ttfl_client.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  cbssports_injuries.html  espn_injuries.html
tests/integration/: __init__.py  test_picker_integration.py
tests/unit/: __init__.py  test_discord_notify.py  test_form_analysis.py  test_injuries.py  test_nba_config.py  test_nba_data.py  test_picker.py  test_playoffs.py  test_ttfl.py
