[project]
name = "ttfl-picker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.1",
    "discord-webhook>=1.3",
    "nba-api>=1.11.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.0",
    "requests>=2.32.5",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "responses>=0.25",
    "freezegun>=1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
